# adventofcode

h2019/: README.md  brittany.yaml  h2019.cabal
h2019/src/: Day1.hs  Day10.hs  Day2.hs  Day5.hs  Day6.hs  Day7.hs
rust_2019/: Cargo.toml
rust_2019/src/: day_1.rs  day_10.rs  day_18.rs  day_3.rs  day_4.rs  day_6.rs  day_8.rs  day_9.rs  main.rs
