name:                h2019
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leshow/h2019#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           2019 Evan Cameron
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable h2019
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
                     , mtl
  ghc-options:         -O2 -threaded "-with-rtsopts=-N" -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -frefinement-level-hole-fits=1
  default-extensions:          DeriveFoldable
                             , DeriveFunctor
                             , DeriveGeneric
                             , DeriveTraversable
                             , DeriveLift
                             , DeriveAnyClass
                             , DerivingStrategies
                             , DerivingVia
                             , GeneralizedNewtypeDeriving
                             , OverloadedStrings
                             , OverloadedLabels
                             , ExistentialQuantification
                             , StandaloneDeriving
                             , ScopedTypeVariables
                             , UnicodeSyntax
                             , BinaryLiterals
                             , NumDecimals
                             , ConstraintKinds
                             , RankNTypes
                             , TypeFamilies
                             , TypeInType
                             , PolyKinds
                             , DataKinds
                             , KindSignatures
                             , TypeOperators
                             , TypeApplications
                             , GADTs
                             , NamedFieldPuns
                             , InstanceSigs
                             , PartialTypeSignatures
                             , TypeSynonymInstances
                             , MultiParamTypeClasses
                             , FunctionalDependencies
                             , ConstrainedClassMethods
                             , InstanceSigs
                             , FlexibleInstances
                             , FlexibleContexts
                             , BangPatterns
                             , ViewPatterns
                             , PatternGuards
                             , MultiWayIf
                             , EmptyCase
                             , LambdaCase
                             , TupleSections